--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,27 @@ body{
     align-items: center;
 }
 
+/*Date Time */
+
+.date-time {
+  text-align: right;
+  padding-right: 2.5vw;
+  bottom: 16vw;
+  position: relative;
+}
+
+.clock {
+  font-family: Courier New;
+  font-size: 1.56vw;
+  padding-right: 3vw;
+}
+
+.date {
+  font-family: Courier New;
+  font-size: 1.56vw;
+  padding-top: 1vw;
+}
+
 ::selection{
   color: #464646;
 }
@@ -216,7 +237,7 @@ p > a:hover{
   -ms-transition:.5s;
   -moz-transition:.5s;
   -webkit-transition:.5s;
-  transition: .5s;
+  transition: 0.5s;
   background-color: #3d3d3d;
   border-radius: 25px;
 }
@@ -232,7 +253,7 @@ p > a:hover{
   display: flex;
   margin-left: 34.3vw;
   margin-right: 37vw;
-  margin-top: 2.5vw;
+  padding-top: 0.7vw;
 }
 
 .projects-main{
@@ -246,6 +267,7 @@ p > a:hover{
   max-width: 31.25vw;
   background-color:#464646;
   border-radius: 0.52vw;
+  padding-bottom: 0.4vw;
 }
 
 .project-img-main{
@@ -280,8 +302,21 @@ p > a:hover{
 .project-img-second{
   border-radius: 0.52vw;
   width: 31.25vw;
+  height: fit-content;
 }
 
 .project-subtitle-second{
   font-weight: 800;
+}
+
+.wawe-titles{
+  padding-top: 6vw;
+}
+
+.yd{
+  font-weight: bolder;
+}
+
+.yd:hover{
+  text-decoration: underline;
 }
